# gepa_behavior

./: .gitignore  README.md  README_IRONING_ROBOT.md  demo_ironing_robot.py  pyproject.toml  requirements-robosuite.txt  requirements.txt  simple_demo.py
configs/: default.yaml
notebooks/: demo.ipynb
runs/: events.jsonl  events.out.tfevents.1755753304.Abirals-MacBook-Pro-513.local.95212.0  events.out.tfevents.1755753474.Abirals-MacBook-Pro-513.local.95388.0  events.out.tfevents.1755753571.Abirals-MacBook-Pro-513.local.95427.0  events.out.tfevents.1755753851.Abirals-MacBook-Pro-513.local.95573.0  events.out.tfevents.1755756521.Abirals-MacBook-Pro-513.local.96296.0  events.out.tfevents.1755756907.Abirals-MacBook-Pro-513.local.96408.0  events.out.tfevents.1755756945.Abirals-MacBook-Pro-513.local.96462.0  events.out.tfevents.1755757042.Abirals-MacBook-Pro-513.local.96526.0  events.out.tfevents.1755757073.Abirals-MacBook-Pro-513.local.96574.0  events.out.tfevents.1755757359.Abirals-MacBook-Pro-513.local.96868.0  events.out.tfevents.1755758425.Abirals-MacBook-Pro-513.local.97183.0  events.out.tfevents.1755758652.Abirals-MacBook-Pro-513.local.97474.0  events.out.tfevents.1755758669.Abirals-MacBook-Pro-513.local.97505.0  events.out.tfevents.1755758680.Abirals-MacBook-Pro-513.local.97531.0  events.out.tfevents.1755758950.Abirals-MacBook-Pro-513.local.97669.0  events.out.tfevents.1755758963.Abirals-MacBook-Pro-513.local.97695.0  events.out.tfevents.1755759038.Abirals-MacBook-Pro-513.local.97771.0  events.out.tfevents.1755759226.Abirals-MacBook-Pro-513.local.97913.0  metrics.csv  (+10 more)
(+33 files in other folders)
